chinh sua man hinh ds chuyen bay

--- a/flights/static/main.html
+++ b/flights/static/main.html
@@ -6,9 +6,19 @@
 </head>
 
 <header>
-    <h1>LOGO</h1>
-</header>
+    <main>
+        <div class="contaner">
+            <div class="banner">
+                <div class="navbar">
+                    <a class="nav-item active" href="./index.html">Đặt vé</a>
+                    <a class="nav-item" href="">Báo cáo</a>
+                    <a class="nav-item" href="">Cập nhật chuyến bay</a>
+                </div>
+            </div>
+        </div>
 
+    </main>
+</header>
 <body>
     
     {% block content%}
